# tradingagents-marketplace

./: .gitignore  CLAUDE.md  README.md  file_locations_summary.txt  generate_video_call_chain.md
plugins/futu/: .env.example  .gitignore  Futu-API-Doc-zh-Python.md  pyproject.toml
plugins/futu/.claude-plugin/: plugin.json
plugins/futu/skills/futuapi/: SKILL.md
plugins/futu/skills/futuapi/docs/: API_REFERENCE.md  FIELD_MAPPING.md
plugins/futu/skills/futuapi/scripts/: common.py
plugins/gv/: .gitignore  .mcp.json  README.md  package.json  pyproject.toml  requirements.txt
plugins/gv/.claude-plugin/: plugin.json
plugins/gv/python/: __init__.py  __main__.py  composer.py  config.py  md_parser.py  renderer.py  tts_engine.py
plugins/gv/python/templates/: base.css  conclusion.html  disclaimer.html  follow.html  point.html  rating.html  title.html
plugins/gv/python/tests/: test_composer.py  test_renderer.py
plugins/gv/remotion/: .gitignore  package.json  remotion.config.ts  tsconfig.json
plugins/gv/remotion/src/: Root.tsx  ShortVideo.tsx  types.ts
plugins/gv/remotion/src/__tests__/: audio-sync.test.ts  render.test.ts  seeded-random.test.ts  variants.test.ts
plugins/gv/remotion/src/components/: AnimatedText.tsx  CountUp.tsx  FilmGrain.tsx  FloatingOrbs.tsx  GlassCard.tsx  HighlightChip.tsx  ProgressBar.tsx  Subtitle.tsx
plugins/gv/remotion/src/scenes/: CatalystScene.tsx  ComparisonScene.tsx  ConclusionScene.tsx  DataHighlightScene.tsx  (+7 more)
plugins/gv/src/: index.ts
plugins/gv/src/tools/: call-python.ts  compose.ts  generate.ts  parse.ts  render.ts  tts.ts
(+160 files in other folders)
