[project]
name = "gv"
version = "0.1.0"
description = "Video generation — converts Chinese trading analysis reports into narrated scrolling videos"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.0",
    "moviepy>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "playwright>=1.40.0",
    "jinja2>=3.1.0",
]
